@@ -11,8 +11,9 @@ root_path = os.path.dirname(src_dir)
 assets_path = os.path.join(root_path, "assets")
 resources_path = os.path.join(root_path, "resources")
 ###Global variables
-source_dirname = ""
-target_dirname = ""
+source_dirname = os.path.abspath("../../1_Place_Reports_Here/")
+target_dirname = os.path.abspath("../../3_results/")
+print(source_dirname)
 
 ###json file loading and data extraction
 with open(os.path.join(resources_path, "help.json"), "r") as config_file:
